# python-initsystem

./: README.md  initsystem.py  pyproject.toml
