[tool.poetry]
name = "initsystem"
version = "0.1.0"
description = "init-system-agnostic way to start, stop and check statuses of services"
authors = ["ewen-lbh <ewen.lebihan7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
