[tool.poetry]
name = "initsystem"
version = "0.2.0"
description = "init-system-agnostic way to start, stop and check statuses of services"
authors = ["ewen-lbh <ewen.lebihan7@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ewen-lbh/python-initsystem"
homepage = "https://github.com/ewen-lbh/python-initsystem"
documentation = "https://github.com/ewen-lbh/python-initsystem#readme"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: System :: Boot :: Init"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
